# mcp_tic_tac_toe

./: .env  .env_example  README.md  diagram.drawio  main.py  pyproject.toml
mcp_client/: client.py  ollama.py  protocol.py
mcp_server/: game.py  protocol.py  server.py
web_ui/: app.py
web_ui/static/: script.js  style.css
web_ui/templates/: index.html
